Finished html Training

--- a/html_training/1st_projct/index.html
+++ b/html_training/1st_projct/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" dir="ltr">
 	
 	<head>
 		<meta charset="UTF-8"/>
@@ -12,17 +12,29 @@
     </head>
 
 	<body>
-		<div>
-	        <h1>🌟 FrontendKick: The Platform to Kickstart Your Learning Journey 🌟</h1>
-			<p>
-	            FrontendKick is your ultimate companion for mastering frontend development. Our mission is to provide the best resources, tutorials, and tools to help you build a strong foundation in web development and beyond.
-			</p>
-			<img src="pics/frontend.png" alt="Frontend Pic for screen readers and SEO" width="200">
-		</div>
-		<div>
-			<p>Posted by: <strong>Ahmad Hirzallah</strong> on Saturday 4/5/2025</p>
-			<img src="pics\programmer.png" alt="Programmer Pic for screen readers and SEO" width="150">
-		</div>
+			<header>
+		        <h1>🌟 FrontendKick: The Platform to Kickstart Your Learning Journey! 🌟</h1>
+				<nav aria-label="Main Navigation">
+					<a href="Courses.html"> Courses </a>
+					<a href="#"> Blog </a>
+					<a href="#"> Contact Us </a>
+				</nav>
+				<nav aria-label="Language Navigation">
+					<a href="index-ar.html">Arabic |</a>
+					<a href="index.html">English</a>
+				</nav>
+			</header>
+			<header>
+				<h2> Join our <a href="https://chatgpt.com/">website</a> to learn frontend technologies and create many projects.</h2>
+				<p>
+		            FrontendKick is your ultimate companion for mastering frontend development. Our mission is to provide the best resources, tutorials, and tools to help you build a strong foundation in web development and beyond.
+				</p>
+				<img src="pics/frontend.png" alt="Frontend Pic for screen readers and SEO" width="200">
+				<div>
+					<p>Posted by: <strong>Ahmad Hirzallah</strong> on Saturday 4/5/2025</p>
+					<img src="pics\programmer.png" alt="Programmer Pic for screen readers and SEO" width="150">
+				</div>
+			</header>
 		<h2><em>Why Choose FrontendKick</em>?</h2>
 		<ul>
 			<li><strong>C</strong>omprehensive and up-to-date tutorials designed for beginners and professionals <em>alike</em>.</li>
@@ -56,5 +68,28 @@
 			<li><b>Having</b> <i>a strong foundation in frontend</i>!</li>
 			<li><b>Cabability</b> <i>of creating any frontend UI you want</i>!</li>
 		</ul>
+		<aside>
+			<h4>Related Posts:</h4>
+			<nav>
+				<li>
+					<a href="#">
+						<img src="pics/HTML.png" alt="HTML Picture" width="100" height="100">
+						Learn Structuring Web Pages with HTML
+					</a>
+					<p>By Ahmad Hirzallah</p>
+				</li>
+				<li>
+					<a href="#">
+						<img src="pics/CSS.png" alt="CSS Picture" width="100" height="100">
+						Mastering CSS for Beautiful Designs
+					</a>
+					<p>By Ahmad Hirzallah</p>
+				</li>
+			</nav>
+		</aside>
+		<footer>
+			Copyright &copy; 2025 FrontendKick. All rights reserved.
+		</footer>
+	
 	</body>
 </html>
